Fixed issues on Firefox. No offsetX/Y ?!?!?! what is it 1992?

--- a/assets/css/tapangi.css
+++ b/assets/css/tapangi.css
@@ -162,8 +162,7 @@ p, button {
         width: 20px;
         height: 20px;
         margin-top: -10px;
-        margin-left: 50%;
-        margin-right: 50%; }
+        margin-left: 50%; }
       .navbar .navbar-inner .nav > li > a {
         font-family: 'TitilliumText22LLight';
         font-size: 26px;
